chatroom create and get list ok
