# Chat_Goland/Handler/Chatroom/Commands/Create/ChatroomCreateHandlerRequest.go
@@ -1,0 +1,7 @@
+package Chatroom
+
+type ChatroomCreateHandlerRequest struct {
+	Id   int    `json:"id"`
+	Hash string `json:"hash"`
+	Name string `json:"name"`
+}
