# Chat_Goland/docs/swagger.json
@@ -1,13 +1,97 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "Gin Swagger API Jeter",
+        "title": "Gin Swagger API",
         "contact": {},
         "version": "1.0"
     },
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/Chatroom/Create": {
+            "post": {
+                "description": "Set Chatroom room",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chatroom"
+                ],
+                "summary": "Set Chatroom room list",
+                "parameters": [
+                    {
+                        "description": "Chatroom credentials",
+                        "name": "ChatroomCreateHandlerRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Chatroom.ChatroomCreateHandlerRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/Chatroom/List": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chatroom"
+                ],
+                "summary": "Get Chatroom room list",
+                "responses": {
+                    "200": {
+                        "description": "Successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
         "/user/Create": {
             "post": {
                 "consumes": [
@@ -105,6 +189,20 @@
         }
     },
     "definitions": {
+        "Chatroom.ChatroomCreateHandlerRequest": {
+            "type": "object",
+            "properties": {
+                "hash": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "Create.UserCreateRequest": {
             "type": "object",
             "properties": {
